# bem-scripts-generator

./: README.md  pyproject.toml  tox.ini
bem_scripts_generator/: __main__.py  resource_map.py  summary.py
bem_scripts_generator/templates/: run_job.sh  simulation_config.json
