[project]
name = "bem_scripts_generator"

authors = [
    {name = "Adam Pirog"}
    ]

description = "Automated BEM scripts generator"
readme = "README.md"
license = { text="MIT" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1.4,<4.0.0",
    "pandas>=2.2.2,<3.0.0"
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "pylint"
    ]

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bem_scripts_generator*"]

[tool.setuptools.dynamic]
version = {attr = "bem_scripts_generator.version.__version__"}

[project.scripts]
bem-scripts-generator = "bem_scripts_generator.__main__:cli"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
